# dual-ur-ros2-humble-movegroup-pickplace

./: .gitignore  LICENSE  README.md  demo.cpp  启动.sh
IFRA_LinkAttacher-humble/ros2_LinkAttacher/src/: gazebo_link_attacher.cpp
dual_ur_moveit_config/: .setup_assistant  package.xml
dual_ur_moveit_config/config/: controllers.yaml  dual_arm.ros2_control.xacro  dual_arm.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  left_controllers.yaml  moveit.rviz  moveit_controllers.yaml  multi_arm_moveit.rviz  pick_object.yaml  right_arm_servo_config.yaml  right_controllers.yaml  ros2_controllers.yaml
dual_ur_moveit_config/launch/: dual_ur_moveit.launch.py  sim_gazebo.launch.py  sim_moveit.launch.py  sim_moveit_gazebo_all.launch.py
motion_plan/: CMakeLists.txt  package.xml
motion_plan/launch/: motion_plan.launch.py
motion_plan/src/: dual_arm_follower.cpp  jointprinter.cpp  motion_plan.cpp  motion_plan.cpp.backup  readme.md  stack.cpp  value2s.cpp
new_moveit_pkg/: .setup_assistant  CMakeLists.txt  package.xml
new_moveit_pkg/config/: dual_arm.ros2_control.xacro  dual_arm.srdf  dual_arm.urdf.xacro  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
new_moveit_pkg/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  sim_moveit.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
robot_wrench_frame/: CMakeLists.txt  package.xml
robot_wrench_frame/include/: mechanical_arm_control.hpp
robot_wrench_frame/launch/: mechanical_arm_control.launch.py
robot_wrench_frame/src/: mechanical_arm_control.cpp  mechanical_arm_test.cpp
robotiq_description/urdf/: left_robotiq_2f_85_gripper.urdf.xacro  right_robotiq_2f_85_gripper.urdf.xacro
ros2_controllers/joint_trajectory_controller/: CMakeLists.txt
ros2_controllers/ros2_controllers_test_nodes/ros2_controllers_test_nodes/: publisher_joint_trajectory_controller.py
ros2_robotiq_gripper/robotiq_2f_gripper_hardware/: CMakeLists.txt  package.xml
ros2_robotiq_gripper/robotiq_2f_gripper_hardware/include/robotiq_2f_gripper_hardware/: gripper_client.hpp  robotiq_2f_gripper_node.hpp
ros2_robotiq_gripper/robotiq_2f_gripper_hardware/launch/: gripper_test_launch.py  robotiq_2f_gripper_launch.py
ros2_robotiq_gripper/robotiq_2f_gripper_hardware/src/: gripper_client.cpp  gripper_node_test.cpp  robotiq_2f_gripper_node.cpp  test_use_action_client.cpp
ros2_robotiq_gripper/robotiq_driver/include/robotiq_driver/: default_driver.hpp
ros2_robotiq_gripper/robotiq_driver/src/: default_driver.cpp
ros2_robotiq_gripper/robotiq_hardware_tests/src/: gripper_interface_test.cpp
static_broadcaster_listener/: CMakeLists.txt  package.xml
static_broadcaster_listener/config/: static_transforms.yaml
static_broadcaster_listener/include/: static_frame_publisher.hpp  transform_listener.hpp
static_broadcaster_listener/launch/: static_transform_publisher.launch.py
static_broadcaster_listener/src/: publisher_listener_test.cpp  static_frame_publisher.cpp  transform_listener.cpp
ur_description/: package.xml
ur_description/config/: ur_controllers.yaml
ur_description/config/ur3/: default_kinematics.yaml
ur_description/gazebo/: empty.world  sim_env.world
ur_description/launch/: test_gazebo.launch.py  test_gazebo_moveit.launch.py  test_moveit.launch.py  view_ur.launch.py
ur_description/meshes/bracket/: base_left.STL  base_link.STL  base_right.STL
ur_description/meshes/camera/: left_camera_link.STL  right_camera_baselink.STL
ur_description/meshes/table/: base.STL
ur_description/rviz/: view_robot.rviz
ur_description/urdf/: dual_ur.urdf  dual_ur.urdf.xacro  dual_ur_left.xrdf  dual_ur_right.xrdf  left_camera_urdf.urdf  right_camera_urdf.urdf  scene_collision.urdf.xacro  test.urdf  test_new.urdf  ur_macro.xacro
ur_driver/: README.md
ur_driver/cartesian_controllers-ros2/cartesian_controller_base/include/cartesian_controller_base/: cartesian_controller_base.h
ur_driver/cartesian_controllers-ros2/cartesian_controller_base/src/: cartesian_controller_base.cpp
ur_driver/ur_robot_driver/config/: ur_controllers.yaml
ur_driver/ur_robot_driver/launch/: dual_ur_control.launch.py  ur_control.launch.py
